<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sdy60ge5.teamge5_a.MainActivity" 
    android:orientation="vertical" >
    
    
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        
        
        <TextView
            android:id="@+id/tvLocation"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize = "20sp"
        	android:visibility = "invisible"
        	android:text="@string/location" />
		
        
    	<ProgressBar
        	android:id="@+id/pbLocationProgress"
        	android:layout_width="wrap_content"
       		android:layout_height="25sp"
        	android:visibility="invisible"/>
    
    </LinearLayout>
    
   
    <LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
    	
        <TextView
            android:id="@+id/tvSelectPedestrianType"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:visibility="invisible"
        	android:textSize = "20sp"
        	android:text="@string/select_path_type" />
    		
    	<Spinner
        	android:id="@+id/spinnerPathType"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:visibility="invisible"
        	android:entries="@array/path_type_arrays"
        	android:prompt="@string/path_type_prompt" />
    
    </LinearLayout>
    	<Button
        	android:id="@+id/btnSubmitPathType"
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:layout_gravity="center_horizontal"
        	android:visibility="invisible"
        	android:onClick ="onBtnSubmitPathTypeClicked"
        	android:text="@string/btn_submit_path_type" />
    	<ToggleButton
    	    android:id="@+id/togbtnStartRoute"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="center"
        	android:textOn="@string/stop_path"
        	android:textOff="@string/start_path"
        	android:onClick = "onTogBtnstartRouteClicked"
        	android:background="@drawable/my_btn_toggle"/>
    	
    	<fragment
        	android:id="@+id/mapv2"
        	android:name="com.google.android.gms.maps.MapFragment"
        	android:layout_weight="1"
        	android:layout_width="match_parent"
        	android:layout_height="0dp"/>
    	
</LinearLayout>
