<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sdy60ge5.teamge5_a.MapsActivity" >
<!--Για να μην εμφανίζει το settings στο menu
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
-->
<item
        android:id="@+id/action_maps"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="ifRoom"
        android:title="@string/action_menu">
        <menu>
        	<!-- <item
            	android:id="@+id/submenu_show_maps"
            	android:showAsAction="ifRoom"
            	android:title="@string/submenu_show_maps">
        		<menu >
        		    <group android:id="@+id/group_cities">
        	    		<item
            				android:id="@+id/submenu_chania"
            				android:showAsAction="ifRoom"
            				android:title="@string/submenu_chania"/>
        				<item
            				android:id="@+id/submenu_corfu"
            				android:showAsAction="ifRoom"
            				android:title="@string/submenu_corfu"/>
        			</group> 
       	    	</menu>
       	    </item>-->
        	<item
            	android:id="@+id/submenu_review_paths"
            	android:showAsAction="ifRoom"
            	android:title="@string/submenu_review_paths"/>
        	<item
            	android:id="@+id/submenu_rank__list_of_players"
            	android:showAsAction="ifRoom"
            	android:title="@string/submenu_rank__list_of_players"/>
        	
        	
        	</menu>
    </item> 
</menu>
